[project]
name = "odoo-bringout-oca-account-invoicing-account_invoice_supplierinfo_update_triple_discount"
version = "16.0.0"
description = "Account Invoice - Triple Discount Supplier Info Update - In the supplier invoice, automatically update all products whose discounts on the line is different from the supplier discounts"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-account-invoicing-account_invoice_triple_discount>=16.0.0",
    "odoo-bringout-oca-account-invoicing-account_invoice_supplierinfo_update_discount>=16.0.0",
    "odoo-bringout-oca-account-invoicing-purchase_triple_discount>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["account_invoice_supplierinfo_update_triple_discount"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
