[project]
name = "odoo-bringout-oca-account-invoicing-sale_line_refund_to_invoice_qty_skip_anglo_saxon"
version = "16.0.0"
description = "Sale Line Refund To Invoice Qty Skip Anglo Saxon - Sale Line Refund To Invoice Qty skip anglo saxon."
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-account-invoicing-account_invoice_refund_reason_skip_anglo_saxon>=16.0.0",
    "odoo-bringout-oca-account-invoicing-sale_line_refund_to_invoice_qty>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sale_line_refund_to_invoice_qty_skip_anglo_saxon"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
